about page and navItems: fixed issue where page scroll to our-partners section was being cut off

--- a/nextjs-weareiw/src/app/globals.css
+++ b/nextjs-weareiw/src/app/globals.css
@@ -86,6 +86,7 @@ background shapes for sections */
 
 #partners,
 #our-people,
+#our-partners,
 #our-commitment,
 #open-positions,
 #hardware {
